--- a/styles/profile.css
+++ b/styles/profile.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   background-color: red;
   margin: 0;
-  background-color: #141414;
+  background-color: rgba(255, 255, 255, 0.2);
   padding: 1rem;
   border-radius: 4px;
 }
